--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -189,3 +189,29 @@ aside {
 .multiselect--active {
   z-index: 1000 !important;
 }
+
+html,body,#app {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+.com-page {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.com-container{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.com-chart {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
